--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,12 @@
 Package: glmmplus
-Date: 2014-03-25
+Date: 2014-07-02
 Title: Multiple Imputation and Model Selection
-Version: 0.10  
+Version: 0.90  
 Author: Ben Ogorek <baogorek@google.com>,
         Caitlin Hogan <caitlinh@google.com>,
-        Andy Chen <anchen@google.com>
 Maintainer: Ben Ogorek <baogorek@google.com>
+Imports: splines, lme4, mice, multicore, mvtnorm
+Suggests: Runit
 Description: Model selection tools for generalized linear (mixed) models
              with accomidations for missing data.
 
