added LongToWide reshaping function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(MakeSplineStr)
 export(CrossValidate)
 export(GetVariableImpacts)
 export(WideToLong)
+export(LongToWide)
 export(GetRelatedVars)
 export(GetVariableGroupImpact)
 export(ReformatNames)
@@ -19,3 +20,4 @@ S3method(predict, gfo)
 S3method(`[`, mids)
 S3method(WideToLong, mids)
 S3method(WideToLong, data.frame)
+S3method(LongToWide, data.frame)
