--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,12 +12,15 @@ export(LongToWide)
 export(GetRelatedVars)
 export(GetVariableGroupImpact)
 export(ReformatNames)
+export(vcov.gfo)
+export(coef.gfo)
 
 importFrom(mice, complete)
 
 S3method(print, gfo)
 S3method(summary, gfo)
 S3method(coef, gfo)
+S3method(vcov, gfo)
 S3method(predict, gfo)
 S3method(`[`, mids)
 S3method(WideToLong, mids)
