FSR history kept and plotFSR function added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(GetVariableGroupImpact)
 export(ReformatNames)
 export(vcov.gfo)
 export(coef.gfo)
+export(plotFSR)
 
 importFrom(mice, complete)
 
