--- a/.travis.yml
+++ b/.travis.yml
@@ -11,15 +11,11 @@ env:
   global:
   - _R_CHECK_FORCE_SUGGESTS_=false
 
-#after_success
-#after_success:
-#- Rscript -e 'covr::codecov()'
+after_success:
+- Rscript -e 'covr::codecov()'
 
-# Custom parts:
-
-#r_github_packages
-#r_github_packages:
-#- jimhester/covr
+r_github_packages:
+- jimhester/covr
 
 #r_packages
 r_packages:
