--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ BugReports: https://github.com/google/glmmplus/issues
 Depends:
     R (>= 3.1.2)
 Imports:
+    stats,
     splines,
     lme4,
     mice,
