--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,12 +19,19 @@ export(GetVariableGroupImpact)
 export(GetVariableImpacts)
 export(ImputeData)
 export(LongToWide)
+export(MakeSplineStr)
 export(WideToLong)
 export(complete)
 export(mice)
 export(plotFSR)
 export(scoef)
+importFrom(graphics,arrows)
+importFrom(graphics,barplot)
+importFrom(graphics,mtext)
+importFrom(graphics,par)
+importFrom(graphics,text)
 importFrom(lme4,fixef)
+importFrom(lme4,formatVC)
 importFrom(lme4,glmer)
 importFrom(lme4,lmer)
 importFrom(lme4,ranef)
@@ -32,3 +39,19 @@ importFrom(lme4,vcov.merMod)
 importFrom(mice,mice)
 importFrom(nlme,lme)
 importFrom(splines,ns)
+importFrom(stats,as.formula)
+importFrom(stats,coef)
+importFrom(stats,contrasts)
+importFrom(stats,family)
+importFrom(stats,formula)
+importFrom(stats,gaussian)
+importFrom(stats,glm)
+importFrom(stats,logLik)
+importFrom(stats,pchisq)
+importFrom(stats,pf)
+importFrom(stats,predict)
+importFrom(stats,quantile)
+importFrom(stats,sd)
+importFrom(stats,terms)
+importFrom(stats,var)
+importFrom(stats,vcov)
