cleaning up. Removed incoherent CrossValidate function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,7 @@ S3method(print,gfo)
 S3method(summary,gfo)
 S3method(vcov,gfo)
 export(BackwardEliminate)
-export(CrossValidate)
+export(CreateFormula)
 export(FitModel)
 export(ForwardSelect)
 export(GetVariableGroupImpact)
