cleaning up dependencies

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ importFrom(graphics,barplot)
 importFrom(graphics,mtext)
 importFrom(graphics,par)
 importFrom(graphics,text)
+importFrom(lme4,VarCorr)
 importFrom(lme4,fixef)
 importFrom(lme4,formatVC)
 importFrom(lme4,glmer)
@@ -37,6 +38,8 @@ importFrom(lme4,lmer)
 importFrom(lme4,ranef)
 importFrom(lme4,vcov.merMod)
 importFrom(mice,mice)
+importFrom(nlme,corAR1)
+importFrom(nlme,getVarCov)
 importFrom(nlme,lme)
 importFrom(splines,ns)
 importFrom(stats,as.formula)
