Updating roxygen imports and exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ S3method(print,gfo)
 S3method(summary,gfo)
 S3method(vcov,gfo)
 export(BackwardEliminate)
+export(ComputeCoxSnellR2)
+export(ComputeMcFaddensR2)
 export(CreateFormula)
 export(FitModel)
 export(ForwardSelect)
@@ -23,7 +25,10 @@ export(MakeSplineStr)
 export(WideToLong)
 export(complete)
 export(mice)
+export(mice.impute.pmm)
 export(plotFSR)
+export(pool)
+export(pool.compare)
 export(scoef)
 importFrom(graphics,arrows)
 importFrom(graphics,barplot)
@@ -38,6 +43,9 @@ importFrom(lme4,lmer)
 importFrom(lme4,ranef)
 importFrom(lme4,vcov.merMod)
 importFrom(mice,mice)
+importFrom(mice,mice.impute.pmm)
+importFrom(mice,pool)
+importFrom(mice,pool.compare)
 importFrom(nlme,corAR1)
 importFrom(nlme,getVarCov)
 importFrom(nlme,lme)
