--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,10 @@ env:
   - _R_CHECK_FORCE_SUGGESTS_=false
 
 after_success:
-- Rscript -e 'covr::codecov()'
+  - Rscript -e 'covr::codecov()'
 
 r_github_packages:
-- jimhester/covr
+  - jimhester/covr
 
 #r_packages
 r_packages:
@@ -25,3 +25,4 @@ services:
 
 #before_install
 before_install:
+  - sudo apt-get install libnlopt-dev
