--- a/.travis.yml
+++ b/.travis.yml
@@ -25,4 +25,5 @@ services:
 
 #before_install
 before_install:
-  - sudo apt-get install libnlopt-dev
+  - sudo apt-get -qq update
+  - sudo apt-get install -y libnlopt-dev
