--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,4 @@ services:
 #before_install
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -y libnlopt-dev
+  - sudo apt-get install -y nlopt 
